--- a/src/pages/PreviewSide.scss
+++ b/src/pages/PreviewSide.scss
@@ -9,9 +9,10 @@
             margin-bottom: 5px;
             
             border-bottom: 1px solid #E9E9E9;
-
+            text-align: center;
             img {
-                width: 100%;
+                max-height: 130px;
+                max-width: 100%;
             }
         }
 
